// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateModelConfig no providers available returns ULTIMATE_FALLBACK for all agents and categories when no providers 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "data-dive": {
      "model": "opencode/glm-4.7-free",
    },
    "eye-ops": {
      "model": "opencode/glm-4.7-free",
    },
    "eye-scan": {
      "model": "opencode/glm-4.7-free",
    },
    "grid-sync": {
      "model": "opencode/glm-4.7-free",
    },
    "null-audit": {
      "model": "opencode/glm-4.7-free",
    },
    "scan-ops": {
      "model": "opencode/glm-4.7-free",
    },
    "void-runner": {
      "model": "opencode/glm-4.7-free",
    },
    "war-mind": {
      "model": "opencode/glm-4.7-free",
    },
    "zen-planner": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-free",
    },
    "deep": {
      "model": "opencode/glm-4.7-free",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses OpenAI models when only OpenAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "data-dive": {
      "model": "opencode/glm-4.7-free",
    },
    "eye-ops": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "eye-scan": {
      "model": "openai/gpt-5.2",
    },
    "grid-sync": {
      "model": "openai/gpt-5.2",
    },
    "null-audit": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "scan-ops": {
      "model": "opencode/gpt-5-nano",
    },
    "void-runner": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "war-mind": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "zen-planner": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
  },
  "categories": {
    "artistry": {
      "model": "openai/gpt-5.2",
    },
    "deep": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "unspecified-low": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "openai/gpt-5.2",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Gemini models when only Gemini is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "data-dive": {
      "model": "opencode/glm-4.7-free",
    },
    "eye-ops": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "eye-scan": {
      "model": "google/gemini-3-flash",
    },
    "grid-sync": {
      "model": "google/gemini-3-pro",
    },
    "null-audit": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "scan-ops": {
      "model": "opencode/gpt-5-nano",
    },
    "void-runner": {
      "model": "google/gemini-3-pro",
    },
    "war-mind": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "zen-planner": {
      "model": "google/gemini-3-pro",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "quick": {
      "model": "google/gemini-3-flash",
    },
    "ultrabrain": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "google/gemini-3-pro",
    },
    "unspecified-low": {
      "model": "google/gemini-3-flash",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig all native providers uses preferred models from fallback chains when all natives available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "data-dive": {
      "model": "opencode/glm-4.7-free",
    },
    "eye-ops": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "eye-scan": {
      "model": "google/gemini-3-flash",
    },
    "grid-sync": {
      "model": "openai/gpt-5.2",
    },
    "null-audit": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "scan-ops": {
      "model": "opencode/gpt-5-nano",
    },
    "void-runner": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "war-mind": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "zen-planner": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "google/gemini-3-flash",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "unspecified-low": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses OpenCode Zen models when only OpenCode Zen is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "data-dive": {
      "model": "opencode/glm-4.7-free",
    },
    "eye-ops": {
      "model": "opencode/gpt-5.2",
      "variant": "high",
    },
    "eye-scan": {
      "model": "opencode/gemini-3-flash",
    },
    "grid-sync": {
      "model": "opencode/kimi-k2.5-free",
    },
    "null-audit": {
      "model": "opencode/gpt-5.2",
      "variant": "medium",
    },
    "scan-ops": {
      "model": "opencode/claude-haiku-4-5",
    },
    "void-runner": {
      "model": "opencode/claude-opus-4-5",
      "variant": "max",
    },
    "war-mind": {
      "model": "opencode/claude-opus-4-5",
      "variant": "max",
    },
    "zen-planner": {
      "model": "opencode/claude-opus-4-5",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "opencode/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "opencode/claude-opus-4-5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3-pro",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses GitHub Copilot models when only Copilot is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "data-dive": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "eye-ops": {
      "model": "github-copilot/gpt-5.2",
      "variant": "high",
    },
    "eye-scan": {
      "model": "github-copilot/gemini-3-flash",
    },
    "grid-sync": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "null-audit": {
      "model": "github-copilot/gpt-5.2",
      "variant": "medium",
    },
    "scan-ops": {
      "model": "github-copilot/gpt-5-mini",
    },
    "void-runner": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "war-mind": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "zen-planner": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "github-copilot/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "github-copilot/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses ZAI model for archiveResearcher when only ZAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "data-dive": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "eye-ops": {
      "model": "opencode/glm-4.7-free",
    },
    "eye-scan": {
      "model": "zai-coding-plan/glm-4.6v",
    },
    "grid-sync": {
      "model": "opencode/glm-4.7-free",
    },
    "null-audit": {
      "model": "opencode/glm-4.7-free",
    },
    "scan-ops": {
      "model": "opencode/gpt-5-nano",
    },
    "void-runner": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "war-mind": {
      "model": "opencode/glm-4.7-free",
    },
    "zen-planner": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-free",
    },
    "deep": {
      "model": "opencode/glm-4.7-free",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "writing": {
      "model": "zai-coding-plan/glm-4.7",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses OpenAI + Copilot combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "data-dive": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "eye-ops": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "eye-scan": {
      "model": "github-copilot/gemini-3-flash",
    },
    "grid-sync": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "null-audit": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "scan-ops": {
      "model": "github-copilot/gpt-5-mini",
    },
    "void-runner": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "war-mind": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "zen-planner": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses ZAI combination (archiveResearcher uses ZAI) 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "data-dive": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "eye-ops": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "eye-scan": {
      "model": "openai/gpt-5.2",
    },
    "grid-sync": {
      "model": "openai/gpt-5.2",
    },
    "null-audit": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "scan-ops": {
      "model": "opencode/gpt-5-nano",
    },
    "void-runner": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "war-mind": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "zen-planner": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
  },
  "categories": {
    "artistry": {
      "model": "openai/gpt-5.2",
    },
    "deep": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "unspecified-low": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "visual-engineering": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "writing": {
      "model": "zai-coding-plan/glm-4.7",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all fallback providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "data-dive": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "eye-ops": {
      "model": "github-copilot/gpt-5.2",
      "variant": "high",
    },
    "eye-scan": {
      "model": "github-copilot/gemini-3-flash",
    },
    "grid-sync": {
      "model": "opencode/kimi-k2.5-free",
    },
    "null-audit": {
      "model": "github-copilot/gpt-5.2",
      "variant": "medium",
    },
    "scan-ops": {
      "model": "opencode/claude-haiku-4-5",
    },
    "void-runner": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "war-mind": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "zen-planner": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "github-copilot/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "github-copilot/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3-pro",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/pontistudios/ghostwire/master/assets/ghostwire.schema.json",
  "agents": {
    "data-dive": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "eye-ops": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "eye-scan": {
      "model": "google/gemini-3-flash",
    },
    "grid-sync": {
      "model": "opencode/kimi-k2.5-free",
    },
    "null-audit": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "scan-ops": {
      "model": "opencode/claude-haiku-4-5",
    },
    "void-runner": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "war-mind": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "zen-planner": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "max",
    },
    "deep": {
      "model": "openai/gpt-5.2-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.2-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-opus-4.5",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;
